--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1> Odin Recipes</h1>
-    <a href="./lasagne.html">Lasagne Recipe</a>
-    <a href="./whiskey_sour.html">Whiskey Sour Recipe</a>
+    <ul>
+      <li><a href="./lasagne.html">Lasagne Recipe</a></li>
+      <li><a href="./whiskey_sour.html">Whiskey Sour Recipe</a></li>
+    </ul>
 </body>
 </html>
