--- a/lasagne.html
+++ b/lasagne.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>Best Lasagne Recipe</h1>
+    <img src="https://www.allrecipes.com/thmb/92Gi4misECC_dD4e7eG0JjQfWIE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/CD_41800-1-4x3-c347695d9b294f33be5fd51b561e01b1.jpg" alt="picture of lasagne" />
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pasta things</li>
+        <li>Tomato Souce</li>
+        <li>More Tomato Souce</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Compile the lasagne</li>
+        <li>Put in oven for 15 min</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 </html>
