--- a/whiskey_sour.html
+++ b/whiskey_sour.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>Best Whiskey Sour Recipe</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8220222.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="picture of a whiskey sour" />
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Whiskey</li>
+        <li>Lemon juice</li>
+        <li>Sugar Syrup</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Put the whiskey, lemon juice and the sugar syrup in a tumbler </li>
+        <li>Shake the tumbler</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 </html>
